--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
+#body-imagem {
+    background-image: url(img/fundo.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+
 #titulo {
     text-align: center;
+    color: yellow;
 }
 
 .botao {
